# upnp-cli

./: Cargo.toml
src/: main.rs
src/backend/: mod.rs  upnp_funcs.rs  upnp_structs.rs
