[package]
name = "upnp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igd-next = "0.14.3"
cali = { git = "https://github.com/GamingGuy003/cali.git" }
pretty_env_logger = "0.5.0"
log = "0.4.21"
